# C-CMake-Project-Template

./: CMakeLists.txt  SoundexConfig.h.in
src/: CMakeLists.txt  main.cpp
src/libs/: CMakeLists.txt
src/libs/TestClassLib01/: CMakeLists.txt  TestClass01.cpp  TestClass01.h
src/libs/testlib01/: CMakeLists.txt  testlib01.cpp  testlib01.h
tests/: CMakeLists.txt  TitchTests.cpp  main.cpp
