set(PROJECT_LIB_DIRECTORY "libs")
set(APP_SOURCE_FILES main.cpp)

add_subdirectory(${PROJECT_LIB_DIRECTORY})

option(USE_TESTLIB01 "Use testlib01" ON)

set(PROJECT_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
set(PROJECT_INCLUDE_DIRS ${PROJECT_INCLUDE_DIRS} ${PROJECT_BINARY_DIR})
set(PROJECT_INCLUDE_DIRS ${PROJECT_INCLUDE_DIRS} ${EXTRA_LIBS_INCLUDE_PATHS})

include_directories(${PROJECT_INCLUDE_DIRS})

set(PROJECT_INCLUDE_DIRS ${PROJECT_INCLUDE_DIRS} PARENT_SCOPE)

add_executable(${PROJECT_NAME} ${APP_SOURCE_FILES})
target_link_libraries(${PROJECT_NAME} ${EXTRA_LIBS})

set(EXTRA_LIBS ${EXTRA_LIBS} PARENT_SCOPE)